# serializer version: 1
# name: TestBuildDraftPayload.test_cloud_plus_snapshot
  dict({
    'backendSettings': dict({
      'backendType': 'webhook',
      'functionId': '',
      'uri': 'https://yaha-cloud.ru/api/yandex_smart_home',
    }),
    'channel': 'smartHome',
    'enableAllAvailableRegions': True,
    'hideInStore': False,
    'isTrustedSmartHomeSkill': False,
    'logo2': None,
    'logoId': 'be043706-a868-4999-83c8-f17bbd60745d',
    'name': 'Music Assistant',
    'noteForModerator': '',
    'oauthAppId': None,
    'publishingSettings': dict({
      'brandVerificationWebsite': '',
      'category': 'smart_home',
      'developerName': 'alice',
      'email': '',
      'multilingualSettings': dict({
        'ru': dict({
          'externalSettingsDescription': 'Music Assistant',
          'name': 'Music Assistant',
          'secondaryTitle': '',
          'supportedUnitsDescription': 'Music Assistant',
        }),
      }),
      'secondaryTitle': '',
      'smartHome': dict({
        'deepLinks': dict({
          'android': dict({
            'url': '',
          }),
          'ios': dict({
            'fallbackUrl': '',
            'url': '',
          }),
        }),
      }),
    }),
    'selectedRegions': list([
    ]),
    'skillAccess': 'private',
    'voice': 'shitova.us',
  })
# ---
# name: TestBuildDraftPayload.test_direct_snapshot
  dict({
    'backendSettings': dict({
      'backendType': 'webhook',
      'functionId': '',
      'uri': 'https://ma.example.com/api/yandex_smarthome',
    }),
    'channel': 'smartHome',
    'enableAllAvailableRegions': True,
    'hideInStore': False,
    'isTrustedSmartHomeSkill': False,
    'logo2': None,
    'logoId': None,
    'name': 'Music Assistant',
    'noteForModerator': '',
    'oauthAppId': None,
    'publishingSettings': dict({
      'brandVerificationWebsite': '',
      'category': 'smart_home',
      'developerName': 'alice',
      'email': '',
      'multilingualSettings': dict({
        'ru': dict({
          'externalSettingsDescription': 'Music Assistant',
          'name': 'Music Assistant',
          'secondaryTitle': '',
          'supportedUnitsDescription': 'Music Assistant',
        }),
      }),
      'secondaryTitle': '',
      'smartHome': dict({
        'deepLinks': dict({
          'android': dict({
            'url': '',
          }),
          'ios': dict({
            'fallbackUrl': '',
            'url': '',
          }),
        }),
      }),
    }),
    'selectedRegions': list([
    ]),
    'skillAccess': 'private',
    'voice': 'shitova.us',
  })
# ---
# name: TestBuildOAuthAppPayload.test_cloud_plus_snapshot
  dict({
    'authorizationUrl': 'https://yaha-cloud.ru/oauth/authorize',
    'clientId': 'yandex_smart_home:abc123',
    'clientSecret': 'secret',
    'name': 'Music Assistant',
    'refreshTokenUrl': 'https://yaha-cloud.ru/oauth/token',
    'scope': '',
    'tokenUrl': 'https://yaha-cloud.ru/oauth/token',
    'yandexClientId': '',
  })
# ---
# name: TestBuildOAuthAppPayload.test_direct_snapshot
  dict({
    'authorizationUrl': 'https://ma.example.com/api/yandex_smarthome/auth/authorize',
    'clientId': 'https://social.yandex.net/',
    'clientSecret': 'abc123deadbeef',
    'name': 'Music Assistant',
    'refreshTokenUrl': 'https://ma.example.com/api/yandex_smarthome/auth/token',
    'scope': '',
    'tokenUrl': 'https://ma.example.com/api/yandex_smarthome/auth/token',
    'yandexClientId': '',
  })
# ---
